# rust-playground

./: .gitignore  Cargo.toml  README.md
chapters/ch01_intro/: Cargo.toml
chapters/ch01_intro/src/: main.rs
chapters/ch02_overview/: Cargo.toml
chapters/ch02_overview/examples/: gcd.rs  quickreplace.rs
chapters/ch02_overview/examples/actix_gcd/: handler.rs  main.rs
chapters/ch02_overview/examples/mandelbrot/: image_io.rs  main.rs  parse.rs  render.rs
chapters/ch02_overview/src/: lib.rs  main.rs
chapters/ch03_basic_types/: Cargo.toml
chapters/ch03_basic_types/examples/: 01_integer.rs  02_overflow.rs  03_floating.rs  04_bool_char.rs  05_tuple.rs  06_pointer.rs  07_array_vec_slice.rs  08_strings.rs  09_type_alias.rs
chapters/ch03_basic_types/src/: lib.rs  main.rs
chapters/ch04_ownership/: Cargo.toml
chapters/ch04_ownership/examples/: 01_ownership.rs  02_moves.rs  03_moves_in_collections.rs  04_copy_types.rs  05_rc_arc.rs
chapters/ch04_ownership/src/: lib.rs  main.rs
chapters/ch05_references/: Cargo.toml
chapters/ch05_references/examples/: 01_value_references.rs  (+5 more)
chapters/ch06_expressions/: Cargo.toml
chapters/ch07_errors/: Cargo.toml
chapters/ch08_crates_modules/: Cargo.toml
chapters/ch08_crates_modules/examples/: 01_modules_basic.rs  02_paths_imports.rs  03_module_files.rs  04_constants_statics.rs  05_attributes.rs  06_tests.rs
chapters/ch08_crates_modules/src/: lib.rs  main.rs  spores.rs
chapters/ch08_crates_modules/src/plant_structures/: leaves.rs  mod.rs  roots.rs  stems.rs
chapters/ch09_structs/: Cargo.toml
chapters/ch10_enums_patterns/: Cargo.toml
chapters/ch11_traits_and_generics/: Cargo.toml
chapters/ch12_operator_overloading/: Cargo.toml
chapters/ch13_utility_traits/: Cargo.toml
chapters/ch14_closures/: Cargo.toml
chapters/ch15_iterators/: Cargo.toml
chapters/ch16_collections/: Cargo.toml
chapters/ch17_strings_text/: Cargo.toml
chapters/ch18_io/: Cargo.toml
chapters/ch19_concurrency/: Cargo.toml
chapters/ch20_async/: Cargo.toml
chapters/ch20_async/examples/: 01_from_sync.rs  02_future_trait.rs  03_async_await.rs  04_tokio_basics.rs  05_concurrency.rs  06_streams.rs
chapters/ch20_async/src/: lib.rs  main.rs
scratch/: Cargo.toml
scratch/src/: main.rs
(+108 files in other folders)
