[package]
name = "ch02_overview"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
num = "0.4"
image = "0.25"
crossbeam = "0.8"
regex = "1"
owo-colors = "4"

[lints]
workspace = true
