[package]
name = "ch08_crates_modules"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
# 演示条件编译的 user-defined feature
# 用法：cargo build --features extra 或 cargo run --features extra --example 05_attributes
default = []
extra = []
